Clean legacy code, workaround for Zend_Form_Element "select" default validator

--- a/application/layouts/layout.phtml
+++ b/application/layouts/layout.phtml
@@ -89,7 +89,7 @@
             <div style="display: block; clear: both"></div>
         </div>
 
-        <div id="footer">
+        <div id="footer" class='row'>
             <hr>
             <center>2013</center>
         </div>
