--- a/application/views/scripts/scenario/index.phtml
+++ b/application/views/scripts/scenario/index.phtml
@@ -69,9 +69,9 @@ foreach ($this->users as $user) {
                         }
 </script>
 <div id="main"></div>
+   <button class="btn btn-primary" onClick="javascript:window.location.replace('<?php echo $this->url(array('controller' => 'scenario', 'action' => 'add-scenario')); ?>')"><?php echo $this->translate('add new scenario'); ?></button>
 <div class="object-list">
     <?php
-    echo $this->partial('partials/scenario/form.phtml', array('users' => $this->users));
     echo $this->partial('partials/scenario/list.phtml', array('scenarios' => $this->scenarios, 'assignments' => $this->assignments));
     ?>
 </div>
