Cleaned Forms staff

--- a/application/views/scripts/form/index.phtml
+++ b/application/views/scripts/form/index.phtml
@@ -107,6 +107,8 @@
                     '</tr>';
                 }
                 echo '</table>';
+            } else {
+                echo $this->translate('<h3 class="text-warning">no forms found</h3>');
             }
             ?>
 
